--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,188 @@
+altair==6.0.0
+annotated-types==0.7.0
+anyio==4.9.0
+appnope==0.1.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==3.0.0
+async-lru==2.0.5
+attrs==25.3.0
+babel==2.17.0
+beautifulsoup4==4.13.4
+bleach==6.2.0
 blinker==1.9.0
-certifi==2026.1.4
-charset-normalizer==3.4.4
-click==8.3.1
+blis==1.3.3
+bs4==0.0.2
+cachetools==6.2.4
+catalogue==2.0.10
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+cloudpathlib==0.23.0
+colorlover==0.3.0
+comm==0.2.2
+confection==0.1.5
+contourpy==1.3.2
+cufflinks==0.17.3
+cycler==0.12.1
+cymem==2.0.13
+dacite==1.9.2
+debugpy==1.8.14
+decorator==5.2.1
+defusedxml==0.7.1
+emoji==2.15.0
+et_xmlfile==2.0.0
+executing==2.2.0
+fake-useragent==2.2.0
+fastjsonschema==2.21.1
+filetype==1.2.0
 Flask==3.1.2
-idna==3.11
+fonttools==4.58.0
+fqdn==1.5.1
+gensim==4.4.0
+gitdb==4.0.12
+GitPython==3.1.46
+graphviz==0.21
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+ImageHash==4.3.1
+imbalanced-learn==0.14.0
+imblearn==0.0
+ipykernel==6.29.5
+ipython==9.2.0
+ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.7
+isoduration==20.11.0
 itsdangerous==2.2.0
+jedi==0.19.2
 Jinja2==3.1.6
-MarkupSafe==3.0.3
-numpy==2.4.0
-pandas==2.3.3
+joblib==1.5.1
+json5==0.12.0
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.12.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.16.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.4.2
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.15
+kiwisolver==1.4.8
+lightgbm==4.6.0
+llvmlite==0.44.0
+MarkupSafe==3.0.2
+matplotlib==3.10.0
+matplotlib-inline==0.1.7
+minify_html==0.18.1
+mistune==3.1.3
+multimethod==1.12
+murmurhash==1.0.15
+narwhals==2.13.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.5
+nltk==3.9.2
+notebook==7.4.2
+notebook_shim==0.2.4
+numba==0.61.0
+numpy==2.3.0
+openpyxl==3.1.5
+overrides==7.7.0
+packaging==25.0
+pandas==2.3.1
+pandocfilters==1.5.1
+parso==0.8.4
+patsy==1.0.2
+pexpect==4.9.0
+phik==0.12.5
+pillow==11.2.1
+platformdirs==4.3.8
+plotly==6.5.0
+preshed==3.0.12
+prometheus_client==0.22.0
+prompt_toolkit==3.0.51
+protobuf==6.33.2
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+puremagic==1.30
+pyarrow==22.0.0
+pycparser==2.22
+pydantic==2.12.3
+pydantic_core==2.41.4
+pydeck==0.9.1
+Pygments==2.19.1
+pyparsing==3.2.3
+python-certifi-win32==1.6.1
 python-dateutil==2.9.0.post0
+python-json-logger==3.3.0
 pytz==2025.2
-requests==2.32.5
+PyWavelets==1.9.0
+PyYAML==6.0.2
+pyzmq==26.4.0
+referencing==0.36.2
+regex==2025.9.18
+requests==2.32.3
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.25.1
+scikit-learn==1.7.1
+scipy==1.15.3
+seaborn==0.13.2
+Send2Trash==1.8.3
+setuptools==80.8.0
+setuptools-scm==9.2.0
 six==1.17.0
-tzdata==2025.3
-urllib3==2.6.3
-Werkzeug==3.1.4
+smart_open==7.5.0
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.7
+spacy==3.8.11
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.2
+stack-data==0.6.3
+statsmodels==0.14.5
+streamlit==1.52.2
+tenacity==9.1.2
+terminado==0.18.1
+thinc==8.3.10
+threadpoolctl==3.6.0
+tinycss2==1.4.0
+toml==0.10.2
+tornado==6.5.1
+tqdm==4.67.1
+traitlets==5.14.3
+typeguard==4.4.4
+typer-slim==0.21.1
+types-python-dateutil==2.9.0.20250516
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+uri-template==1.3.0
+urllib3==2.4.0
+visions==0.8.1
+wasabi==1.1.3
+wcwidth==0.2.13
+weasel==0.4.3
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+Werkzeug==3.1.3
+widgetsnbextension==4.0.14
+wordcloud==1.9.4
+wrapt==1.17.3
+xgboost==3.1.2
+ydata-profiling==4.17.0
